<resources>
    <string name="app_name">FinMan</string>
    <string name="settings">Settings</string>
    <string name="msg_error_no_internet_connection">No Internet connection</string>
    <string name="network_error_server">Server error</string>
    <string name="network_error_unauthorized">Unauthorized</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="screen_title_sign_up">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_have_account">Already have an account?</string>
    <string name="label_not_have_account">Don\'t have account?</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="label_sign_in">Sign in</string>
    <string name="hint_currency">Currency</string>
    <string name="item_menu_finances">Finances</string>
    <string name="item_menu_credits">Credits</string>
    <string name="item_menu_charts">Charts</string>
    <string name="item_menu_profile">Profile</string>
</resources>
